// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`atx.md - markdown-verify 1`] = `
# h1

## h2
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# h1

## h2

`;

exports[`long-heading.md - markdown-verify 1`] = `
# this is a long long long long long long long long long long long long long long heading.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# this is a long long long long long long long long long long long long long long heading.

`;

exports[`mixed.md - markdown-verify 1`] = `
## LaraCart - Laravel Shopping Cart Package (<a href="http://laracart.lukepolo.com/">http://laracart.lukepolo.com</a>)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## LaraCart - Laravel Shopping Cart Package (<a href="http://laracart.lukepolo.com/">http://laracart.lukepolo.com</a>)

`;

exports[`setext.md - markdown-verify 1`] = `
h1
===

h2
---
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# h1

## h2

`;

exports[`unbreakable.md - markdown-verify 1`] = `
### \`reporters\` [array<moduleName | [moduleName, options]>]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
### \`reporters\` [array<moduleName | [moduleName, options]>]

`;
